# EDDS1_PROYECTO1_2026

./: CMakeLists.txt  Digrama de Clases P1EDD.drawio  README.md  README_INVENTARIO.md  run_server.sh  x.drawio
Manuales/: Digrama de Clases P1EDD.drawio  TADS Pro1 EDD.drawio
data/: muestra_conexiones.csv  muestra_productos.csv  muestra_sucursales.csv  productos.csv  productos_demo.csv  productos_errores.csv
fronted/: CMakeCache.txt  Makefile  README.md  angular.json  cmake_install.cmake  package-lock.json  package.json  proxy.conf.json  supermercado  supermercado_server
fronted/public/: simulation.html
fronted/src/: index.html  styles.css
fronted/src/app/: app.config.ts  app.routes.ts
fronted/src/app/components/benchmark/: benchmark.css  benchmark.html  benchmark.ts
fronted/src/app/components/branch-selector/: branch-selector.html  branch-selector.ts
fronted/src/app/components/catalog/: catalog.css  catalog.html  catalog.ts
fronted/src/app/components/layout/: layout.css  layout.html  layout.ts
fronted/src/app/components/not-found/: not-found.html
fronted/src/app/components/operation-history/: operation-history.css  operation-history.html  operation-history.ts
fronted/src/app/components/product/: product.html  product.ts
fronted/src/app/components/toast/: toast.ts
fronted/src/app/models/: branch.model.ts  connection.model.ts  history.model.ts  product.model.ts  transfer.model.ts
fronted/src/app/pages/csv-import/: csv-import.css  csv-import.html  csv-import.ts
fronted/src/app/pages/simulation/: simulation.css  simulation.html  simulation.ts
fronted/src/app/services/: api.service.ts  branch.service.ts  graph.service.ts  history.service.ts  inventory.service.ts  state.service.ts  transfer.service.ts
include/: AVLTree.h  BPlusTree.h  BTree.h  Benchmark.h  Branch.h  BranchBenchmark.h  BranchManager.h  CSVLoader.h  Catalog.h  Graph.h  HashTable.h  InventoryService.h  LinkedList.h  Logger.h  Menu.h  OperationHistory.h  Product.h  Queue.h  RealtimeTransfer.h  SimulationEngine.h  SortedLinkedList.h  Stack.h  TransferService.h
report/demo/: productos_demo.csv_BPlus.dot  productos_demo.csv_BTree.dot
report/errors/: productos_errores_AVL.dot  productos_errores_BPlus.dot  productos_errores_BTree.dot
report/products/: productos_AVL.dot  productos_BPlus.dot  productos_BTree.dot
resultados/: temp_branches.csv  temp_connections.csv  temp_graph.dot  temp_products.csv
src/: AVLTree.cpp  BPlusTree.cpp  BTree.cpp  Benchmark.cpp  Branch.cpp  BranchBenchmark.cpp  BranchManager.cpp  CSVLoader.cpp  Catalog.cpp  Graph.cpp  HashTable.cpp  InventoryService.cpp  LinkedList.cpp  Logger.cpp  Menu.cpp  Product.cpp  RealtimeTransfer.cpp  Server.cpp  SimulationEngine.cpp  SortedLinkedList.cpp  TransferService.cpp  main.cpp
src/utils/: FileDialog.cpp  FileDialog.h
(+17 files in other folders)
